<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/currentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
        android:id="@+id/addScheduleButton"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="35dp"
        android:text="@string/add_schedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/remainedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="84dp"
        android:text="@string/time_remained"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/goalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:text="@string/goal_distance"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <ImageButton
        android:id="@+id/battery"
        android:layout_width="194dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/battery" />

    <TextView
        android:id="@+id/outputTime"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remainedTime" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="218dp"
        android:layout_height="30dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="96dp"
        android:max="100"
        android:progress="50"
        android:progressTint="#22FF18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/battery" />

    <ImageView
        android:id="@+id/pikachuBolt"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pikachubolt" />

    <EditText
        android:id="@+id/title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="100dp"
        android:text="@string/start_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="140dp"
        android:text="@string/stop_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/evInfoGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/ev_info_guide"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/evInfoGuide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="68dp"
        android:text="@string/ev_info_guide2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/evInfo"
        android:layout_width="115dp"
        android:layout_height="39dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evInfoGuide" />

    <EditText
        android:id="@+id/inputDistance"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalDistance" />

    <EditText
        android:id="@+id/evDate"
        android:layout_width="90dp"
        android:layout_height="39dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/evTime"
        app:layout_constraintTop_toBottomOf="@+id/evInfoGuide2" />

    <EditText
        android:id="@+id/evTime"
        android:layout_width="90dp"
        android:layout_height="39dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:inputType="time"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evInfoGuide2" />

    <TextView
        android:id="@+id/schedule"
        android:layout_width="144dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="35dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addScheduleButton" />

    <Button
        android:id="@+id/delScheduleButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="39dp"
        android:text="@string/del_schedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/evTime" />

</androidx.constraintlayout.widget.ConstraintLayout>